# librarian-mcp

./: .firebaserc  .gitignore  BOUNTIES.md  BUILDING_TOGETHER.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  firebase.json  pyproject.toml  smithery.yaml
docs/: getting-started.md  why-this-matters.md
hosted/: index.html
issues/: 001_founder_voice_preload.md  002_translation_preload_es.md  003_bulk_jsonl_import.md  004_provenance_keystone_test.md  005_pr_test_action.md
scripts/: pull_launch_metrics.py
src/librarian_mcp/: __init__.py  __main__.py  hosted.py  server.py
